Changed depreciated calls. Add compiler check. Fixes #7